# cloudflare-workspace-template

./: Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml
workers/hello-world-rust/: Cargo.toml  wrangler.toml
workers/hello-world-ts/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
workers/hello-world-ts/src/: index.ts
