[package]
name = "hello-world-rust"
version = "0.1.0"
edition = "2021"
authors = ["parzivale <40600864+parzivale@users.noreply.github.com>"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0" }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
